welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:12: warning: enclosing method fonctionTest has result type Unit: return value discarded
  return estFaceMur() & bool
  ^SnakeBuggle:17: error: value unary_! is not a member of Unit
  while (!fonctionTest()) {
         ^